--- a/curso-github/index.html
+++ b/curso-github/index.html
@@ -8,6 +8,11 @@
     <title>Curso Git y Github</title>
 </head>
 <body>
-    <h1>Curso de Git y Github</h1>
+    <div id="container">
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+        </div>
+    </div>
 </body>
 </html>
