--- a/curso-github/index.html
+++ b/curso-github/index.html
@@ -15,6 +15,8 @@
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque cumque dolorum corporis veniam quo totam incidunt numquam eveniet modi nostrum, temporibus eius dicta reiciendis, esse, sit officiis non ratione voluptas.</p>
         </div>
     </div>
 </body>
