change header text

--- a/curso-github/index.html
+++ b/curso-github/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             <h1>Curso de Git y Github</h1>
-            <span id="tagline">Tu blog de cabecera</span>
+            <span id="tagline">Tu blog de Git y Github</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
